# mrc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
mrc/: __init__.py  _new.py  _version.py  lenses.py  mrc.py
scripts/: download_samples.py
src/mrc/: __init__.py  _new.py  dtypes.py  lenses.py  mrc.py
tests/: data  test_dv.py  test_mrc.py  test_readme.py  toxo.dv
