# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mrc/_version.py"

# https://hatch.pypa.io/latest/config/build/#file-selection
[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

# https://peps.python.org/pep-0621/
[project]
name = "mrc"
dynamic = ["version"]
description = "Read and write .mrc and .dv (deltavision) image file format"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy >=2.3.2; python_version >= '3.14'",
    "numpy >=2.1.0; python_version >= '3.13'",
    "numpy >=1.26.0; python_version >= '3.12'",
    "numpy >=1.25.2",
]

[dependency-groups]
test = [
    "pytest-cov>=7",
    "pytest>=8",
    "dask>=2024",
    "psutil>=5.9.8",
    "xarray>=2024",
]
dev = [
    { include-group = "test" },
    "ipython>=8.18.1",
    "mypy>=1.19.1",
    "pdbpp>=0.11.7",
    "prek>=0.2.25",
    "rich>=14.2.0",
    "ruff>=0.14.10",
]

[project.urls]
"Source Code" = "https://github.com/tlambert03/mrc"

[tool.ruff]
line-length = 88
target-version = "py37"
fix = true
unsafe-fixes = true

# https://beta.ruff.rs/docs/rules/
[tool.ruff.lint]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",    # pyupgrade
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]
exclude = ["src/mrc/mrc.py", "scripts/*.py"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"setup.py" = ["D"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "mrc.mrc"
ignore_errors = true


# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
]
omit = ["src/mrc/mrc.py"]
show_missing = true

[tool.coverage.run]
source = ["src"]
omit = ["*/_version.py"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
    ".autoenv.zsh",
    "scripts/**/*",
    "src/mrc/_version.py",
]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)nd2?.*", "(?i)ome", ".*ser_schema", "APON"]
